--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.4.0",
-    "@angular/cdk": "^12.0.3",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.4.0",
     "@angular/compiler": "~13.4.0",
     "@angular/core": "~13.4.0",
     "@angular/forms": "~13.4.0",
-    "@angular/material": "^12.0.3",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.4.0",
     "@angular/platform-browser-dynamic": "~13.4.0",
     "@angular/router": "~13.4.0",
@@ -25,7 +25,6 @@
     "express": "^4.18.1",
     "moment": "^2.29.1",
     "ng2-charts": "^3.1.2",
-    "ngx-bootstrap": "^7.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -43,6 +42,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "ng2-charts-schematics": "^0.1.7",
     "nodemon": "^2.0.19",
-    "typescript": "~4.6.4"
+    "typescript": "^4.4.3"
   }
 }
